@startuml

' hide the spot
' hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity "aircraft" as aircraft {
  *aircraftName : string <<PK>>
  --
  *aircraftRegisNum : string
  *aircraftSerialNum : string
  *aircraftType : string
  *aircraftMTOW : int
  *aircraftType : string
  *aircraftDescription : string
  *totalFlightTime : int
  *createdAt : zondDateTime
  *updatedAt : zondDateTime
}

entity "battery" as battery {
  *batteryId : int <<generated>>
  --
  *batteryType : string
  *batteryCapacity : int
  *batterySize : int
  *batteryCell : int
  *usingTime : int
  *createdAt : zonedDateTime
  *updatedAt : zonedDateTime
}

entity "person" as operator {
  *id : int <<PK>> <<generated>>
  --
  *name : string 
  *phoneNumber : int
  *teamName : string
  *position : string
  *certification : string
  *createdAt : zondDateTime
  *updatedAt : zondDateTime
}

entity "flightOperator" as flightOperator {
  *flightDataId : int <<FK>>
  *operatorId : int <<FK>>
  --
  *flightOperatorId : person <<PK>> 
  *role : EP / IP / obserser
  *createdAt : zondDateTime
  *updatedAt : zondDateTime 
}

entity "flightData" as flightPlan {
  *id : int <<generated>>
  --
  *aircraftName : aircraft <<FK>>
  *serialId : List<battery> <<FK>>
  *batteryUsage : int
  *flightDate : zondDateTime
  *windSpeed : int
  *windDirection : int
  *humidity : int
  *temperature : int
  *flightTime : int
  *payloadItem : string
  *payloadWeight : int
  *createdAt : zondDateTime
  *updatedAt : zondDateTime
}



flightPlan ||--o{ flightOperator
operator ||--o{ flightOperator

battery }o--|| flightPlan
aircraft }o--|| flightPlan


@enduml
